fixed uninstall hook bug, properly initiated styles and scripts

--- a/lib/admin/templates/vimeography/help.mustache
+++ b/lib/admin/templates/vimeography/help.mustache
@@ -10,6 +10,10 @@
 	<h3>Where do I find the ID number of my gallery?</h1>
 	<p></p>
 	
+	<h3>Can I override my gallery settings in the shortcode?</h3>
+	<p>Sure thing! You can define all of the properties found in the admin panel right in your shortcode as well. Try using one, any, or all of the following parameters:</p>
+	<code>[vimeography id="3" theme="thumbs" featured="28380190" source="channel" named="staffpicks" cache="3600"]</code>
+	
 	<h3>Can I add the gallery to my theme's sidebar/footer/header etc.</h1>
 	<p>Yes, but you'll need some PHP knowledge to do it! Open the file you want to add the gallery to, and type <code>&lt;?php do_shortcode('[vimeography id="<span style="color:blue;">#</span>"]</strong>'); ?&gt;</code>, where <span style="color:blue;">#</span> is replaced by the ID number of your gallery.</p>
 	
