fixed a core bug, began theme installation, added css flexibility and collision wrappers

--- a/lib/admin/templates/theme/list.mustache
+++ b/lib/admin/templates/theme/list.mustache
@@ -23,5 +23,19 @@
 			</li>
 		{{/themes}}
 	</ul>
+	
+	<h1 style="clear:both;">Install new theme</h1>
+		
+    <form class="form-horizontal">
+	    <fieldset>
+		    <div class="control-group">
+			    <label class="control-label" for="theme-uploader"></label>
+			    <div class="controls">
+				    <input type="file" class="input-file input-large" id="theme-uploader" style="font-size:13px;">
+				    <p class="help-block">Supporting help text</p>
+			    </div>
+		    </div>
+	    </fieldset>
+    </form>
+    
 </div>
-
