--- a/themes/cloud/videos.mustache
+++ b/themes/cloud/videos.mustache
@@ -1,5 +1,5 @@
-<ul class='tag-cloud'>
+<ul class='vimeography-tag-cloud'>
 	{{#info}}
-		<li class="{{popularity}}"><a href="#{{id}}" class="tag">{{title}}</a></li>
+		<li class="{{popularity}}"><a href="#" class="tag" data-id="{{id}}">{{title}}</a></li>
 	{{/info}}
 </ul>
