--- a/themes/thumbs/videos.mustache
+++ b/themes/thumbs/videos.mustache
@@ -1,29 +1,29 @@
-<div id="vimeography-container">
+<div class="vimeography-thumbs-container">
 
-	<div id="vimeography-thumbnails">
+	<div class="vimeography-thumbs-thumbnails">
 		{{#info}}
-			<div class="crop">
-			    <a class="vimeography-thumbnail" href="#{{id}}" title="{{title}}"><img src="{{thumbnail_small}}" alt="{{title}}" height="75" width="100" /></a>
+			<div class="vimeography-thumbs-crop">
+			    <a class="vimeography-thumbs-thumbnail" href="#{{id}}" title="{{title}}"><img src="{{thumbnail_small}}" alt="{{title}}" height="75" width="100" /></a>
 			</div>
 		{{/info}}
 	</div>
 	
-	<div id="vimeography-loader">
-		<div id="vimeography-player">
+	<div class="vimeography-thumbs-player-wrapper">
+		<div class="vimeography-thumbs-player">
 			{{#featured}}
-				<iframe id="vimeography-embed" src="http://player.vimeo.com/video/{{id}}?title=0&byline=0&portrait=0&api=1&player_id=vimeography-embed" width="1000" height="564" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+				<iframe id="vimeography-thumbs-embed" src="http://player.vimeo.com/video/{{id}}?title=0&byline=0&portrait=0&api=1&player_id=vimeography-thumbs-embed" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			{{/featured}}
 		</div>
 	</div>
 	
-	<div id="vimeography-info">
+	<div class="vimeography-thumbs-info">
 		{{#featured}}
 			<h1>{{title}}</h1>
 			<p>{{{description}}}</p>
 		{{/featured}}
 	</div>
 	
-	<div id="vimeography-data">
+	<div class="vimeography-thumbs-data">
 		{{#info}}
 			<h1 data-id="{{id}}">{{title}}</h1>		
 			<p data-id="{{id}}" class="vimeography-description">{{{description}}}</p>
