--- a/lib/admin/templates/gallery/new.mustache
+++ b/lib/admin/templates/gallery/new.mustache
@@ -53,6 +53,7 @@
 		</table>
 		
 		<hr />
+		{{{nonce}}}
 		<input class="btn btn-primary btn-large" type="submit" value="Create Gallery">
 	</form>
 </div>
