Added video limit, updated readme, v0.4

--- a/lib/admin/templates/gallery/edit.mustache
+++ b/lib/admin/templates/gallery/edit.mustache
@@ -145,6 +145,14 @@
 								</td>
 							</tr>
 							<tr>
+								<th scope="row"><h2>number of videos to show</h2></th>
+								<td>
+									<h2>
+										<input type="text" size="20" name="vimeography_advanced_settings[video_count]" value="{{video_count}}" />
+									</h2>
+								</td>
+							</tr>
+							<tr>
 								<th scope="row"><h2>feature the video located at</h2></th>
 								<td>
 									<h2>
