Changed theme dir, added new default theme, switched to flexslider

--- a/lib/admin/templates/gallery/edit.mustache
+++ b/lib/admin/templates/gallery/edit.mustache
@@ -81,10 +81,8 @@
 						<a class="close" data-dismiss="alert" href="#">&times;</a>
 				    	<strong>Heads up!</strong> You can insert this gallery on a post or page by typing <strong>[vimeography id="{{id}}"]</strong>
 				    </div>
-					<div style="width: 1000px; max-width: 100%; margin: 0 auto; clear: left;">
-						<div style="margin: 0 auto;">
-							{{{vimeography}}}
-						</div>
+					<div style="width: 1000px; max-width: 100%; margin: 20px auto; clear: both;">
+						{{{vimeography}}}
 					</div>
 					<hr />
 				    <form id="vimeography-appearance-form" method="post" action="{{admin_url}}edit-galleries&id={{id}}">
