--- a/lib/admin/templates/gallery/list.mustache
+++ b/lib/admin/templates/gallery/list.mustache
@@ -67,6 +67,7 @@
 		            <th width="360" class="manage-column column-title" id="title" scope="col">Title</th>
 		            <th style="" class="manage-column column-author" id="author" scope="col">Video Source  <div class="wp_bootstrap" style="display:inline-block;"><a class="vimeography-question" href="#" rel="tooltip" title="This tells you the location of the videos that your gallery is using."><i class="icon-question-sign"></i></a></div></th>
 		            <th style="" class="manage-column" id="template" scope="col">Shortcode  <div class="wp_bootstrap" style="display:inline-block;"><a class="vimeography-question" href="#" rel="tooltip" title="Copy and paste this on to your post or page to show the gallery!"><i class="icon-question-sign"></i></a></div></th>
+		            <th style="" class="manage-column" id="theme-name" scope="col">Active Theme  <div class="wp_bootstrap" style="display:inline-block;"><a class="vimeography-question" href="#" rel="tooltip" title="The theme that is currently applied to your gallery."><i class="icon-question-sign"></i></a></div></th>
 		        </tr>
 		    </thead>
 		
@@ -76,8 +77,9 @@
 		            <th class="manage-column column-cb check-column" id="active" scope="col"></th>
 		            <th class="manage-column" id="id" scope="col">Id</th>
 		            <th width="350" class="manage-column column-title" id="title" scope="col">Title</th>
-		            <th style="" class="manage-column column-author" id="author" scope="col">Video Source</th>
-		            <th style="" class="manage-column" id="template" scope="col">Shortcode</th>
+		            <th style="" class="manage-column column-author" id="source" scope="col">Video Source</th>
+		            <th style="" class="manage-column" id="shortcode" scope="col">Shortcode</th>
+		            <th style="" class="manage-column column-author" id="theme" scope="col">Active Theme</th>
 		        </tr>
 		    </tfoot>
 		
@@ -99,8 +101,9 @@
 								<span class="edit"><a class="vimeography-delete-gallery" data-id="{{id}}" href="#" title="Delete">Delete</a></span>
 							</div>
 				        </td>
-				        <td class="column-date"><strong><a href="{{source_url}}" target="_blank" title="{{source_type}} called {{source_name}}">{{source_url}}</a></strong></td>
+				        <td class="column-date"><strong><a href="{{source_url}}" target="_blank" title="{{source_url}}">{{source_url}}</a></strong></td>
 				        <td class="column-date"><strong>[vimeography id="{{id}}"]</strong></td>
+				        <td class="column-date"><strong>{{theme_name}}</strong></td>
 				    </tr>
 		    	{{/galleries}}	
 								
