Added version detection to theme list.
v0.6.6

--- a/lib/admin/templates/theme/list.mustache
+++ b/lib/admin/templates/theme/list.mustache
@@ -20,7 +20,7 @@
 					
 					<div class="theme-details">
 						<a href="#" data-theme="{{name}}">{{name}}</a> 
-						<span></span>
+						<span><span class="label">v.{{version}}</span></span>
 					</div>
 					
 					<a href="#" data-theme="{{name}}" class="theme-info" style="opacity: 0;">
