Updated readme, edit galleries page now shows theme versions
v0.6.7 really, just a version bump because Vincent Laforet retweeted
Vimeography ;)

--- a/lib/admin/templates/gallery/edit.mustache
+++ b/lib/admin/templates/gallery/edit.mustache
@@ -87,7 +87,7 @@
 											
 											<div class="theme-details">
 												<a href="#" data-theme="{{name}}">{{name}}</a> 
-												<span>{{#active}}in use{{/active}}</span>
+												<span>{{#active}}in use{{/active}}{{^active}}<span class="label">v.{{version}}</span>{{/active}}</span>
 											</div>
 											
 											<a href="#" data-theme="{{name}}" class="theme-info" style="opacity: 0;">
