--- a/bugsauce/media/bugsauce.css
+++ b/bugsauce/media/bugsauce.css
@@ -5,7 +5,7 @@
 .flexslider a:focus  {outline: none;}
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0 !important; list-style: none !important;} 
+.flex-direction-nav {margin: 0; padding: 0 !important; list-style: none !important; list-style-type: none !important;} 
 
 /* FlexSlider Necessary Styles
 *********************************/ 
@@ -72,7 +72,7 @@ html[xmlns] .slides {display: block;}
 /* Custom Modifications */
 
 .vimeography-bugsauce { clear: both; margin: 20px auto; width: 100%; max-width: 820px;}
-.vimeography-bugsauce .vimeography-thumbnails .slides li {width: 186px; height: 108px; overflow: hidden; margin-right: 8px; cursor: pointer;}
+.vimeography-bugsauce .vimeography-thumbnails .slides li {width: 186px; height: 108px; overflow: hidden; margin: 0 8px 0 0; cursor: pointer;}
 .vimeography-bugsauce .vimeography-thumbnails .slides li:last-child {margin-right: 0;}
 .vimeography-bugsauce .vimeography-thumbnails .slides li img {width: 184px; height: 105px; border: 1px solid #DDDDDD; border-radius: 4px 4px 4px 4px; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075); display: block;}
 
@@ -82,6 +82,7 @@ html[xmlns] .slides {display: block;}
 .vimeography-bugsauce .vimeography-main {background: url(img/loader.gif) no-repeat 50% 50% transparent;}
 .vimeography-bugsauce .vimeography-main .slides {margin: 0;}
 .vimeography-bugsauce .vimeography-main .flex-direction-nav {margin: 0;}
+.vimeography-bugsauce .vimeography-main .flex-direction-nav li {list-style: none !important;}
 .vimeography-bugsauce .vimeography-main .flex-direction-nav a {width: 62px; height: 124px;}
 .vimeography-bugsauce .vimeography-main .flex-direction-nav .flex-next {background-position: -62px 0;}
 .vimeography-bugsauce .vimeography-main .flex-direction-nav .flex-prev {background-position: 0 0;}
