--- a/bugsauce/media/bugsauce.css
+++ b/bugsauce/media/bugsauce.css
@@ -35,6 +35,7 @@ html[xmlns] .slides {display: block;}
 .vimeography-bugsauce .carousel li {margin-right: 5px}
 
 /* Direction Nav */
+.vimeography-bugsauce .flex-direction-nav li {list-style: none;}
 .vimeography-bugsauce .flex-direction-nav a {width: 36px; height: 39px; margin: -20px 0 0; display: block; background: url(img/arrows.png) no-repeat 0 0; position: absolute; top: 50%; cursor: pointer; text-indent: -9999px; opacity: 0; filter: alpha(opacity=0); -webkit-transition: all .3s ease;}
 .vimeography-bugsauce .flexslider:hover .flex-next {opacity: 1; filter: alpha(opacity=100); right: 0;}
 .vimeography-bugsauce .flexslider:hover .flex-prev {opacity: 1; filter: alpha(opacity=100); left: 0;}
