--- a/lib/admin/templates/gallery/edit.mustache
+++ b/lib/admin/templates/gallery/edit.mustache
@@ -140,6 +140,14 @@
 								</td>
 							</tr>
 							<tr>
+								<th scope="row"><h2>set the gallery width to</h2></th>
+								<td>
+									<h2>
+										<input type="text" size="20" name="vimeography_advanced_settings[gallery_width]" placeholder="eg. 960px, 35%" value="{{gallery_width}}" />
+									</h2>
+								</td>
+							</tr>
+							<tr>
 								<th scope="row"><h2>feature the video located at</h2></th>
 								<td>
 									<h2>
